--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blue-sunset",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
